--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,3 +18,43 @@
     line-height: 1.5em;
     background: var(--primary-color);
   }
+
+  #container {
+    max-width: 640px;
+    margin: 50px auto;
+    background: #fff;
+    padding: 20px;
+    border-radius: 10px;
+  }
+
+  form input, form label, form button {
+    display: block;
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  
+  form input {
+    font-size: 24px;
+    height: 50px;
+    padding: 0 20px;
+    border-radius: 10px;
+  }
+  
+  form input:focus {
+    outline: 1px solid var(--primary-color);
+  }
+  
+  form button {
+    border: none;
+    background: var(--primary-color);
+    color: #fff;
+    font-size: 18px;
+    font-weight: 700;
+    height: 50px;
+    cursor: pointer;
+    margin-top: 30px;
+  }
+  
+  form button:hover {
+    background: var(--primary-color-clearer);
+  }
