--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@
 
   #container {
     max-width: 640px;
-    margin: 50px auto;
+    margin: 10% auto;
     background: #fff;
     padding: 20px;
     border-radius: 10px;
@@ -37,7 +37,8 @@
     font-size: 24px;
     height: 50px;
     padding: 0 20px;
-    border-radius: 10px;
+    border-radius: 20px;
+    border-color: #000000;
   }
   
   form input:focus {
